--- a/contact/index.html
+++ b/contact/index.html
@@ -28,7 +28,7 @@
 		<div class="wrapper">
 			<canvas id="c"></canvas>
 		</div>
-			<h1 class="frame"><a href="../"><img src="contact/res/back.png" style="width: 50%;margin:0 0 0 0; padding: 0 0 0 0;"></a></h1>
+			<h1 class="frame"><a href="../"><img src="res/back.png" style="width: 50%;margin:0 0 0 0; padding: 0 0 0 0;"></a></h1>
 			<h1 class="frame__title"><a href="mailto:ioaana.ionescu@gmail.com" >ioaana.ionescu@gmail.com</a>
 			<a href="tel:0747422364" style="padding-left: 60px; float:right;">0747 422 364</a>
 		</h1>
